changed error handling and added comment doc for swagger
